--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-#homePage {
+#topRed {
   color: red;
 }
 
@@ -13,3 +13,12 @@
   border-radius: 30px;
   text-align: center;
 }
+
+#blueTitle{
+  top: 200;
+  left: 200;
+  position: absolute;
+  z-index: 5;
+  visibility: show;
+}
+
