--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,37 @@ body{
   transition: 0.2s;
   background-color: #e03e3e;
 }
+
+#booksTitle{
+  position: absolute;
+  top: 0px;
+  left: 25px;
+  border: none;
+  color: white;
+  background-color: none;
+  font-size: 25px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+#addReadingButton{
+  display: inline-block;
+  background-color: orange;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #000000;
+  text-align: center;
+  font-size: 20px;
+  padding: 0Spx;
+  width: 150px;
+  height: 50px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  position: absolute;
+  top: 85%;
+  left: 20px;
+}
