--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,16 @@ body{
   top: 85%;
   left: 20px;
 }
+
+.line{
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -47%);
+  width: 90vw;
+  height: 50vh;
+  background-color: lightblue;
+  border-radius: 50px;
+}
+
+
