--- a/src/index.css
+++ b/src/index.css
@@ -64,22 +64,22 @@ body{
   display: inline-block;
   background-color: orange;
   border-radius: 10px;
-  border: 4px double #cccccc;
+  border: none;
   color: #000000;
   text-align: center;
   font-size: 20px;
-  padding: 0Spx;
   width: 160px;
   height: 50px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  cursor: pointer;
   margin: 5px;
   position: absolute;
   top: 85%;
   left: 20px;
+  transition: 0.3s;
+}
+
+#addReadingButton:hover{
+  background-color: rgb(173, 113, 0);
+  color: white;
 }
 
 
